# kec-fm

./: .gitignore  CMakeLists.txt  README.md
data/: index  outputkec.fasta  unique_regions.fasta
data/neighbors/: n1.fasta  n10.fasta  n2.fasta  n3.fasta  n4.fasta  n5.fasta  n6.fasta  n7.fasta  n8.fasta  n9.fasta
data/targets/: t1.fasta  t10.fasta  t2.fasta  t3.fasta  t4.fasta  t5.fasta  t6.fasta  t7.fasta  t8.fasta  t9.fasta
src/: CMakeLists.txt  create-index.cpp  kmer-search.cpp
